<resources>
    <string name="app_name" translatable="false">Ovalion</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">"Password "</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_calendar" translatable="false">CalendarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_booking" translatable="false">BookingActivity</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="permission_rationale">Access to contacts is required</string>
    <string name="title_activity_trips" translatable="false">TripsActivity</string>
    <string name="title_activity_teams" translatable="false">TeamsActivity</string>
    <string name="drawer_teams">Teams</string>
    <string name="drawer_booking">Booking</string>
    <string name="drawer_trips">Trips</string>
    <string name="drawer_settings">Settings</string>
    <string name="language_image_content_desc">French flag</string>
    <string name="allTeams">All teams</string>
    <string name="homeTeam">Home team</string>
    <string name="awayTeam">Away Team</string>
</resources>
