<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/drawer_calendar" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_teams" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_booking" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/drawer_trips" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_settings" />
    </group>

</menu>
